# radflow.ai

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  (+1 more)
ops/orthanc/: orthanc.json
ops/otel/: otel-collector.yaml
ops/postgres/: init.sql
ops/prometheus/: prometheus.yml
services/api-gateway/: Dockerfile  package.json
services/dictation/: Dockerfile  package.json  tsconfig.json
services/integration/: Dockerfile  package.json
services/report-ai/: Dockerfile  pyproject.toml
services/report-ai/src/report_ai/: config.py  draft_service.py  main.py
services/report-ai/src/report_ai/contracts/: events.py
services/report-ai/src/report_ai/eval/: __main__.py  cases.py  harness.py
services/report-ai/src/report_ai/providers/: anthropic_provider.py  base.py  factory.py  openai_provider.py  stub.py
services/report-ai/tests/: test_contracts.py  test_draft_route.py  test_eval.py  test_health.py  test_providers.py
services/worklist/: Dockerfile  jest.config.ts  package.json  tsconfig.build.json
specs/: 0001-nats-jetstream-vs-kafka.md  0002-transactional-outbox.md  0003-hl7v2-vs-fhir.md  0004-ohif-via-orthanc-plugin.md  0005-llm-eval-harness.md  0006-web-speech-vs-whisper.md  0007-pacote-ddd-compartilhado.md  0008-database-por-servico.md  0009-gateway-fronteira-de-confianca.md  README.md
(+208 files in other folders)
