[project]
name = "report-ai"
version = "0.1.0"
description = "Report AI service: report structuring, impression generation and critical findings"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.118.0",
    "fastapi>=0.116",
    "openai>=2.47.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.17",
    "pytest>=8.4",
    "ruff>=0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src", "tests"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
